[tool.poetry]
name = "lost-stats.github.io"
version = "0.1.0"
description = ""
authors = ["Kevin Wilson <khwilson@gmail.com>"]
packages = [
    { include = "lostutils", from = "." }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
tqdm = "^4.60.0"
isort = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
mistune = "2.0.0rc1"
pytest-xdist = "^2.2.1"
black = "^21.4b2"
isort = "^5.8.0"

[tool.poetry.scripts]
lost = "lostutils.cli:cli"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,_,df,pc"

[tool.pylint.messages_control]
disable = "C0330, C0326, R0912, R0913, R0914, R0915"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
